style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
@import url("https://fonts.cdnfonts.com/css/cocogoose");

* {
  font-family: "Lato", sans-serif;
  color: #272a31;
  padding: 0;
  margin: 0;
}

.toolbar {
  display: none;
}

.mobile-navbar {
  background-image: url(./images/background1.png);
}

#hambuger {
  font-size: 28px;
  padding: 10px;
}

.menu {
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: -100vw;
  background-color: #fff;
  transition: left 300ms ease-in;
}

.mobile-navbar nav i {
  font-size: 28px;
  position: absolute;
  top: 1em;
  right: 1em;
}

.mobile-navbar nav ul {
  display: flex;
  flex-direction: column;
  gap: 2em;
  margin-top: 3em;
  margin-left: 2em;
}

.mobile-navbar nav ul li {
  list-style: none;
}

.nav-link {
  color: #fff;
}

.header {
  display: none;
}

.mobile-menu {
  background-color: #272a31;
  left: 0;
}

#close-btn {
  color: #fff;
}

.hello-container {
  background-image: url(./images/background1.png);
  background-repeat: no-repeat;
  background-size: cover;
  padding-bottom: 0%;
}

.hello {
  padding: 20px;
}

.hello-subtitle {
  color: #ec5242;
  font-size: 1.5em;
}

.hello-title {
  background-image: url(./images/background-text.jpg);
  text-transform: uppercase;
  background-repeat: repeat;
  background-size: contain;
  color: transparent;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  font-size: 2em;
  font-weight: 900;
  line-height: 48px;
  font-family: 'Lexend Deca', sans-serif;
}

.hello-text {
  padding: 20px;
  text-align: left;
  margin-top: -10%;
  word-break: break-all;
  font-size: 0.82em;
}

.hello-text p {
  margin-top: 10px;
}

.location-container {
  margin-bottom: 10%;
}

.date {
  font-size: 1.5em;
  font-weight: 900;
  margin-left: 5%;
  width: 90%;
  text-align: left;
  letter-spacing: 0;
}

.location {
  font-size: 1.3em;
  font-weight: 700;
  width: 90%;
  text-align: left;
  margin-left: 5%;
}

.main-program {
  background-image: url(./images/background.png);
  background-repeat: repeat;
  background-color: #272a32;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
  padding: 2em 0;
}

#main-program {
  color: #fff;
  font-size: 28px;
}

#main-program::after {
  content: "";
  display: block;
  height: 2px;
  width: 2.5em;
  background-color: #ec5242;
  text-align: center;
  margin: 1em 2em 0;
}

.layout {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.7em;
  margin: 2.5em 0;
}

.cards {
  background-color: rgba(255, 255, 255, 0.1);
  display: flex;
  justify-content: center;
  gap: 10px;
  align-items: center;
  padding: 0.5em;
  height: 100%;
  width: 90%;
}

.cards h3 {
  color: #ec5242;
  font-size: 20px;
  width: 30%;
}

.cards p {
  color: #fff;
  font-size: 16px;
  width: 50%;
}

.whole-program {
  display: none;
}

.mobile-navbar nav ul li a {
  text-decoration: none;
  font-size: 28px;
  font-weight: 600;
}

.partners {
  background-color: #414246;
}

.partners-title {
  color: #8f8f91;
  text-align: center;
  padding-top: 5%;
  margin-top: 0%;
}

.partners-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.partner {
  margin-bottom: 5%;
}

.logo-partner {
  width: 4em;
  height: 1.8em;
}

.partners-title-bar {
  width: 3em;
  height: 1em;
  border-bottom: 1px solid #ef513c;
  margin: 1px auto 8px;
}

footer {
  display: flex;
  gap: 3em;
  padding: 2em;
  align-items: center;
  justify-content: center;
}

.logo {
  width: 50vw;
  font-size: 30px;
}

.footer-text {
  font-size: 14px;
}

.f-text {
  display: none;
}

.aboutme-container {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  align-items: center;
  justify-content: center;
}

.aboutme-introduction {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-image: url(./images/background-about.png);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 1em 0;
}

.aboutme-introduction h1 {
  color: #ec5242;
  font-family: 'COCOGOOSE', sans-serif;
  font-size: 36px;
  text-transform: uppercase;
  text-align: center;
}

.aboutme-sharing {
  color: #ec5242;
  font-size: 28px;
  margin-bottom: 0.5em;
}

#aboutme-sharing {
  display: block;
}

.aboutme-text {
  background-color: #fff;
  border: 1px solid #272a314b;
  width: 90%;
  font-size: 16px;
  text-align: center;
  line-height: 32px;
  padding: 2em 1em;
  margin-top: 1em;
}

.aboutme-contact {
  text-align: center;
  font-size: 17px;
  line-height: 28px;
}

.aboutme-email {
  font-weight: bold;
  font-size: 18px;
}

.aboutme-logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 70%;
  padding: 2em 0;
  gap: 2em;
}

.aboutme-logo h2 {
  font-size: 28px;
  color: #272a31;
  line-height: 36px;
}

.aboutme-logo p {
  font-size: 18px;
  line-height: 28px;
}

.aboutme-logo img {
  height: 60px;
  border: 1px solid #d3d3d3;
  padding: 15px 15px 15px 15px;
}

.aboutme-events {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 2em;
  padding: 2em 0;
}

.aboutme-events hr {
  width: 100vw;
  border: 0.1em solid #d3d3d3;
}

.aboutme-events h3 {
  font-size: 26px;
}

.aboutme-events p {
  font-size: 16px;
}

.aboutme-past-events {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
}

.event1 {
  width: 90vw;
  height: 240px;
  background-image:
    linear-gradient(
      rgba(255, 0, 0, 0.45),
      rgba(255, 0, 0, 0.45)
    ),
    url(./images/edition1.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #fff;
  background-color: #ec5242;
}
/* ... */

